--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div onclick="defOp('+')" class="tecla-esp">+</div>
                 <div onclick="digito('.')" class="tecla">.</div>
                 <div onclick="digito('0')" class="tecla">0</div>
-                <div onclick="" class="tecla-esp">%</div>
+                <div onclick="teclaRaiz()" class="tecla-esp">raiz</div> 
                 <div onclick="defIgual()" class="tecla-esp">=</div>
             </div>
         </div>
