implementação do botão Inverso.

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                 <div onclick="digito('0')" class="tecla">0</div>
                 <div onclick="teclaRaiz()" class="tecla-esp">raiz</div> 
                 <div onclick="defIgual()" class="tecla-esp">=</div>
+                <div onclick="teclaInverso()" class="tecla-esp">1/x</div>
             </div>
         </div>
     </div>
