implementação do botão de inversão de sinal

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                 <div onclick="teclaRaiz()" class="tecla-esp">raiz</div> 
                 <div onclick="defIgual()" class="tecla-esp">=</div>
                 <div onclick="teclaInverso()" class="tecla-esp">1/x</div>
+                <div onclick="teclaInversaoDeSinal()" class="tecla-esp">+/-</div>
             </div>
         </div>
     </div>
