--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
                 <div onclick="defOp('+')" class="tecla-esp">+</div>
                 <div onclick="digito('.')" class="tecla">.</div>
                 <div onclick="digito('0')" class="tecla">0</div>
-                <div onclick="teclaRaiz()" class="tecla-esp">raiz</div> 
+                <div onclick="teclaPorcentagem()" class="tecla-esp">%</div>
                 <div onclick="defIgual()" class="tecla-esp">=</div>
+                <div onclick="teclaRaiz()" class="tecla-esp">raiz</div> 
+                
                 <div onclick="teclaInverso()" class="tecla-esp">1/x</div>
                 <div onclick="teclaInversaoDeSinal()" class="tecla-esp">+/-</div>
             </div>
