--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                 <div onclick="digito('0')" class="tecla">0</div>
                 <div onclick="teclaPorcentagem()" class="tecla-esp">%</div>
                 <div onclick="defIgual()" class="tecla-esp">=</div>
+                <div onclick="teclaQuadrado()" class="tecla-esp">x²</div>
                 <div onclick="teclaRaiz()" class="tecla-esp">raiz</div> 
-                
                 <div onclick="teclaInverso()" class="tecla-esp">1/x</div>
                 <div onclick="teclaInversaoDeSinal()" class="tecla-esp">+/-</div>
             </div>
