implementação das teclas on/off

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <div class="container-teclas">
                 <div onclick="teclaC()" class="tecla-esp">C</div>
                 <div onclick="teclaCLM()" class="tecla-esp">CLM</div>
-                <div onclick="" class="tecla-esp">S/F</div>
-                <div onclick="" class="tecla-esp">S/F</div>
+                <div onclick="teclaOFF()" class="tecla-esp">OFF</div>
+                <div onclick="teclaON()" class="tecla-esp">ON</div>
                 <div onclick="teclaRM()" class="tecla-esp">RM</div>
                 <div onclick="teclaMmais()" class="tecla-esp">M+</div>
                 <div onclick="teclaMmenos()" class="tecla-esp">M-</div>
